bevy_elf_macros/tests/ui/fail/default_and_from_default.rs
use bevy_elf_macros::FromDef;

#[derive(FromDef)]
#[allow(unused)]
struct Foo {
    #[elf(default, from_default)]
    x: bool,
}

fn main() {}
